--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link rel="stylesheet" href="style.css">
-        <title>Weather Alerts</title>
+        <title>Weather Forecast</title>
 
         <script src="alerts.js"></script>
         <script src="forecast.js"></script>
