--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
         <script src="alerts.js"></script>
         <script src="forecast.js"></script>
+        <script src="radar.js"></script>
+
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+        <script src="https://cdn.maptiler.com/maptiler-sdk-js/v2.3.0/maptiler-sdk.umd.js"></script>
+        <link href="https://cdn.maptiler.com/maptiler-sdk-js/v2.3.0/maptiler-sdk.css" rel="stylesheet" />
+        <script src="https://cdn.maptiler.com/leaflet-maptilersdk/v2.0.0/leaflet-maptilersdk.js"></script>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -17,6 +25,8 @@
         <!-- 
             <button id="testAlert" class="testAlert" style="font-size: 50px;">Send Test Alert</button>
         --->
+        <div id="mapLabel">Radar</div>
+        <div id="map"></div>
 
         <div id="ForecastHeader">
             5-Day Forecast
@@ -26,7 +36,7 @@
             <div class="forecastDay" id="day1">
                 <span id="day1label">Today</span>
                 <div class="conditions">
-                    <img id="day1icon" class="weatherIcon" src="/sun-solid.png" width="100px">
+                    <img id="day1icon" class="weatherIcon" src="./assets/sun-solid.png" width="100px">
                     <br/>
                     <span class="temp" id="hiDay1">HI: 00°F</span>
                     <br/>
@@ -41,7 +51,7 @@
             <div class="forecastDay" id="day2">
                 <span id="day2label">Day2</span>
                 <div class="conditions">
-                    <img id="day2icon" class="weatherIcon" src="/sun-solid.png" width="100px">
+                    <img id="day2icon" class="weatherIcon" src="./assets/sun-solid.png" width="100px">
                     <br/>
                     <span class="temp" id="hiDay2">HI: 00°F</span>
                     <br/>
@@ -56,7 +66,7 @@
             <div class="forecastDay" id="day3">
                 <span id="day3label">Day3</span>
                 <div class="conditions">
-                    <img id="day3icon" class="weatherIcon" src="/sun-solid.png" width="100px">
+                    <img id="day3icon" class="weatherIcon" src="./assets/sun-solid.png" width="100px">
                     <br/>
                     <span class="temp" id="hiDay3">HI: 00°F</span>
                     <br/>
@@ -71,7 +81,7 @@
             <div class="forecastDay" id="day4">
                 <span id="day4label">Day4</span>
                 <div class="conditions">
-                    <img id="day4icon" class="weatherIcon" src="/sun-solid.png" width="100px">
+                    <img id="day4icon" class="weatherIcon" src="./assets/sun-solid.png" width="100px">
                     <br/>
                     <span class="temp" id="hiDay4">HI: 00°F</span>
                     <br/>
@@ -86,7 +96,7 @@
             <div class="forecastDay" id="day5" style="margin-right: 0;">
                 <span id="day5label">Day5</span>
                 <div class="conditions">
-                    <img id="day5icon" class="weatherIcon" src="/sun-solid.png" width="100px">
+                    <img id="day5icon" class="weatherIcon" src="./assets/sun-solid.png" width="100px">
                     <br/>
                     <span class="temp" id="hiDay5">HI: 00°F</span>
                     <br/>
