Add metropolis font

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="ForecastHeader">
             5-Day Forecast
         </div>
-        <button id="hideLocation">Hide location</button>
+        <button id="hideLocation" style="font-family: Bebas Neue">Hide location</button>
         <div class="forecastContainer">
             <div class="forecastDay" id="day1">
                 <span id="day1label">Today</span>
