--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
         <!-- 
             <button id="testAlert" class="testAlert" style="font-size: 50px;">Send Test Alert</button>
         --->
-        <div id="mapLabel">Radar</div>
+        <button id="mapLabel">Radar</button>
         <div id="map"></div>
+
+        <button id="mapReturn">
+            <span class="material-symbols-outlined" style="color: black; font-size: 20px">
+            arrow_back_ios
+            </span>
+            
+            <span style="font-size: 30px">Back</span>
+        </button>
 
         <div id="ForecastHeader">
             5-Day Forecast
