--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <!-- 
             <button id="testAlert" class="testAlert" style="font-size: 50px;">Send Test Alert</button>
         --->
-        <button id="mapLabel">Radar</button>
+        <button id="mapLabel">
+            <span class="material-symbols-outlined" style="font-size: 20px; position: fixed;">
+                fullscreen
+            </span>
+            <span style="padding-left: 25px;">Radar</span>
+        </button>
         <div id="map"></div>
 
         <button id="mapReturn">
