--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="forecast.js"></script>
         <script src="radar.js"></script>
 
-        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
