--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
         </button>
         <div id="map"></div>
 
+        <div id="alertContainer">
+            <button id="closeAlert" class="material-symbols-rounded">close</button>
+            <div id="eventText"></div>
+
+            <div id="detailsForPolygon"></div>
+            <div id="description"></div>
+            <button id="alertDropdown">
+                <span id="dropdownIcon" class="material-symbols-rounded" style="color: black;">keyboard_arrow_down</span>
+            </button>
+        </div>
+
         <button id="mapReturn">
             <span class="material-symbols-outlined" style="color: black; font-size: 20px">
             arrow_back_ios
