Latest radar data should work now, also prepping for map-in-motion

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             </span>
             <span style="padding-left: 25px;">Radar</span>
         </button>
-        <div id="map"></div>
+        <div id="mapContainer">
+            <div id="map"></div>
+        </div>
 
         <div id="alertContainer">
             <button id="closeAlert" class="material-symbols-rounded">close</button>
@@ -146,7 +148,7 @@
             </span>Alerts
         </button>
 
-        <div id="singleWarningContainer" style="display: none;">
+        <div id="singleWarningContainer" style="display: none; font-family: Bebas Neue;">
             <div style="display: inline-block;">
                 <div id="warningTitle">
                     <span class="material-symbols-rounded" id="warningIcon" style="font-size: 30px; padding-right: 10px;">
