Snow squall & blizzard warnings

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div id="mapContainer">
             <div id="map"></div>
         </div>
+        <!-- <button id="playRadar" style="z-index: 9999; position:absolute; top:100px">Play</button> -->
 
         <div id="alertContainer">
             <button id="closeAlert" class="material-symbols-rounded">close</button>
